@@ -242,7 +242,7 @@ $allocations = array(
 $sections = array(
     // section => section name (description)
     'com'           => array('title' => ''),
-    'query'         => array('title' => ''),
+    'query'         => array('title' => $strSQLQuery),
     'innodb'        => array('title' => 'InnoDB'),
     'ndb'           => array('title' => 'NDB'),
     'ssl'           => array('title' => 'SSL'),
@@ -279,39 +279,29 @@ $links['repl'][$strShowSlaveHosts]
 $links['repl'][$strShowSlaveStatus]
     = 'sql.php?sql_query=' . urlencode('SHOW SLAVE STATUS') .
       '&amp;goto=server_status.php&amp;' . PMA_generate_common_url();
-$links['repl']['MySQL - ' . $strDocu]
-    = $cfg['MySQLManualBase'] . '/replication.html';
+$links['repl']['doc'] = 'replication';
 
 $links['qcache'][$strFlushQueryCache]
     = $PMA_PHP_SELF . '?flush=' . urlencode('QUERY CACHE') . '&amp;' .
       PMA_generate_common_url();
-$links['qcache']['MySQL - ' . $strDocu]
-    = $cfg['MySQLManualBase'] . '/query-cache.html';
+$links['qcache']['doc'] = 'query_cache';
 
 $links['threads'][$strMySQLShowProcess]
     = 'server_processlist.php?' . PMA_generate_common_url();
-$links['threads']['MySQL - ' . $strDocu]
-    = $cfg['MySQLManualBase'] . '/mysql-threads.html';
+$links['threads']['doc'] = 'mysql_threads';
 
-$links['key']['MySQL - ' . $strDocu]
-    = $cfg['MySQLManualBase'] . '/myisam-key-cache.html';
+$links['key']['doc'] = 'myisam_key_cache';
 
-$links['slow_queries']['MySQL - ' . $strDocu]
-    = $cfg['MySQLManualBase'] . '/slow-query-log.html';
+$links['binlog_cache']['doc'] = 'binary_log';
 
-$links['binlog_cache']['MySQL - ' . $strDocu]
-    = $cfg['MySQLManualBase'] . '/binary-log.html';
-
-$links['Slow_queries']['MySQL - ' . $strDocu]
-    = $cfg['MySQLManualBase'] . '/slow-query-log.html';
+$links['Slow_queries']['doc'] = 'slow_query_log';
 
 $links['innodb'][$strServerTabVariables]
     = 'server_engines.php?engine=InnoDB&amp;' . PMA_generate_common_url();
 $links['innodb'][$strInnodbStat]
     = 'server_engines.php?engine=InnoDB&amp;page=Status&amp;' .
       PMA_generate_common_url();
-$links['innodb']['MySQL - ' . $strDocu]
-    = $cfg['MySQLManualBase'] . '/innodb.html';
+$links['innodb']['doc'] = 'innodb';
 
 
 // sort status vars into arrays
@@ -347,9 +337,7 @@ $hour_factor    = 3600 / $server_status['Uptime'];
     <a href="<?php echo
         $PMA_PHP_SELF . '?flush=STATUS&amp;' . PMA_generate_common_url(); ?>"
        ><?php echo $strShowStatusReset; ?></a>
-    <a href="<?php echo
-        $cfg['MySQLManualBase']; ?>/server-status-variables.html"
-       target="documentation">MySQL - <?php echo $strDocu; ?></a>
+       <?php echo PMA_showMySQLDocu('server_status_variables','server_status_variables'); ?>
 </div>
 
 <p>
@@ -616,7 +604,11 @@ if (! empty($section['title'])) {
             <th colspan="3" class="tblFooters">
 <?php
             foreach ($links[$section_name] as $link_name => $link_url) {
-                echo '<a href="' . $link_url . '">' . $link_name . '</a>' . "\n";
+                if ('doc' == $link_name) {
+                    echo PMA_showMySQLDocu($link_url, $link_url);
+                } else {
+                    echo '<a href="' . $link_url . '">' . $link_name . '</a>' . "\n";
+                }
             }
             unset($link_url, $link_name);
 ?>
@@ -663,8 +655,12 @@ if (! empty($section['title'])) {
 
             if (isset($links[$name])) {
                 foreach ($links[$name] as $link_name => $link_url) {
-                    echo ' <a href="' . $link_url . '">' . $link_name . '</a>' .
+                    if ('doc' == $link_name) {
+                        echo PMA_showMySQLDocu($link_url, $link_url);
+                    } else {
+                        echo ' <a href="' . $link_url . '">' . $link_name . '</a>' .
                         "\n";
+                    }
                 }
                 unset($link_url, $link_name);
             }
