@@ -30,6 +30,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
   default value to false to help cut&paste from a terminal window; also
   set focus to the textarea
 - bug #1814463 [display] Wrong database size
+- bug #1811527 [display] Problem with links to the MySQL manual
 
 2.11.1.2 (2007-10-17)
 - fixed XSS in server_status.php, thanks to Omer Singer, The DigiTrust Group
